# nvi_rs

./: Cargo.toml  LICENSE  README.md
example/: basic.rs
src/: client.rs  constants.rs  errors.rs  lib.rs  soap.rs  sts.rs  xml.rs
tests/: integration.rs
